# fletfactory

./: .gitignore  README.md  pyproject.toml  t.py
src/: card_factory.py  field_definitions.py  field_registry.py  main.py  pyproject_autosave.py  pyproject_service.py  pyproject_writer.py  settings_manager.py  t.py
src/components/: form.py  toast.py  utils.py  waterfall_layout.py  widgets.py
src/config/: pyproject_autosave.py
src/core/: field_definitions.py  field_registry.py  pyproject_service.py  pyproject_writer.py
src/ui/components/: form.py  widgets.py
src/ui/views/: card_factory.py  sidebar.py
src/views/: sidebar.py
