[project]
name = "fletfactory"
version = "0.1.0"
description = "Build flet app with just a few clicks"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Edoardo Balducci", email = "edoardoba2004@gmail.com" }
]
dependencies = [
  "flet==0.27.5",
  "flet_cli===0.27.5"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "it.edblcc"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "fletfactory"

# company name to display in about app dialogs
company = "edblcc"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Edoardo Balducci"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.5",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.5"}